# GeoLens

./: .gitignore  project-layout.txt  pyproject.toml  requirements.txt
geolens/: exif_reader.py
tests/: basic_test.py
